update image source on docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ networks:
       name: net_basic
 services:
   tuna-client-api:
-    image: fabric-client-backend
+    image: b97607065/fabric-tuna-client-backend
     container_name: tuna-client-api.pri
     command: /opt/lbh_fabric_client_play-1.0/bin/lbh_fabric_client_play -Dplay.http.secret.key=abcdefghijk -Dhttp.port=80
     ports:
       - "0.0.0.0:9000:80"
   tuna-client-nginx:
-    image: fabric-client-frontend
+    image: b97607065/fabric-tuna-client-frontend
     container_name: tuna-client-nginx.pri
     ports:
       - "80:80"
